[package]
name        = "fwdp"
version     = "0.1.0"
edition     = "2024"
description = "A simple TCP traffic forwarding tool"
authors     = ["Cnily03 <cnily03@outlook.com>"]
license     = "MIT"

[[bin]]
name = "fwdp"
path = "src/main.rs"

[dependencies]
clap    = { version = "4.0", features = ["derive"] }
tokio   = { version = "1.0", features = ["full"] }
anyhow  = "1.0"
colored = "3.1.1"
chrono  = { version = "0.4", features = ["serde"] }
